Refactored, Fixed bugs, language selection now shows full lang name

--- a/src/lang/english.json
+++ b/src/lang/english.json
@@ -1,5 +1,9 @@
 {
   "general": {
+    "lang": {
+      "en": "English",
+      "de": "German"
+    },
     "buttons": {
       "cancel": "cancel",
       "ok": "ok"
