--- a/src/lang/german.json
+++ b/src/lang/german.json
@@ -1,5 +1,9 @@
 {
   "general": {
+    "lang": {
+      "en": "Englisch",
+      "de": "Deutsch"
+    },
     "buttons": {
       "cancel": "Abbrechen",
       "ok": "Ok"
