--- a/src/lang/german.json
+++ b/src/lang/german.json
@@ -14,14 +14,41 @@
     "buttons": {
       "login": {
         "login": "Anmelden",
-        "google": "Mit Google anmelden"
+        "google": "Mit Google anmelden",
+        "email": "Anmelden"
       },
       "register": {
-        "register": "Registrieren"
+        "register": "Registrieren",
+        "email": "Registrieren"
       },
       "logout": {
         "logout": "Abmelden"
       }
+    },
+    "fields": {
+      "email": {
+        "label": "Email",
+        "error": "Email ist erforderlich!",
+        "placeholder": "Deine E-Mail"
+      },
+      "password": {
+        "label": "Password",
+        "error": "Password ist erforderlich!",
+        "placeholder": "Dein Passwort"
+      },
+      "confirm_password": {
+        "label": "Password bestätigen",
+        "error": "Bestätigen ist erforderlich!",
+        "placeholder": "Dein Passwort"
+      }
+    },
+    "errors": {
+      "auth/user-not-found": "Ungültige E-Mail oder Passwort!",
+      "auth/wrong-password": "Ungültige E-Mail oder Passwort!",
+      "auth/too-many-requests": "Der Login ist zu oft fehlgeschlagen! <br/> Bitte versuche es später erneut.",
+      "auth/password-no-match": "Das bestätigte Passwort und das Passwort müssen identisch sein!",
+      "auth/email-already-in-use": "Ein Nutzer mit dieser E-Mail existiert bereits!",
+      "auth/not-verified": "Bitte bestätige deine E-Mail-Adresse vor dem Anmelden!"
     },
     "login": {
       "title": "Anmelden",
