--- a/src/lang/german.json
+++ b/src/lang/german.json
@@ -13,7 +13,7 @@
   "home": {
     "recipe": {
       "title": "Rezepte",
-      "desc": "Essen ist wichtig, Essen ist lecker, aber kochen ist oft schwer und schwierig.<br/>Hier sind einige Rezepte, die dein Leben vereinfachen können!"
+      "desc": "Essen ist wichtig, Essen ist lecker, aber kochen ist oft schwer.<br/>Hier sind einige Rezepte, die dein Leben vereinfachen können!"
     }
   },
 
